@@ -198,7 +198,7 @@ if test x"$cross_compiling" != x"yes"; then
   AC_FUNC_SETPGRP
 fi
 AC_FUNC_STRFTIME
-AC_CHECK_FUNCS(socket gethostname gettimeofday strtoul strlcpy strlcat stpcpy vsnprintf snprintf setsid strerror uname getrusage sysconf getpgid killpg getlogin realpath fchdir getpass fpathconf getpwent setvbuf select mkstemp memmove scandir setenv)
+AC_CHECK_FUNCS(socket gethostname gettimeofday strtoul strlcpy strlcat stpcpy vsnprintf snprintf setsid strerror uname getrusage sysconf getpgid killpg getlogin realpath fchdir getpass fpathconf getpwent setvbuf select mkstemp memmove setenv)
 dnl Need these for Solaris
 AC_CHECK_FUNC(gethostbyname,,
   AC_CHECK_LIB(nsl, gethostbyname, LIBS="-lnsl $LIBS",))
