@@ -198,9 +198,6 @@
 /* Define to 1 if you have the <resolv.h> header file. */
 #undef HAVE_RESOLV_H
 
-/* Define to 1 if you have the `scandir' function. */
-#undef HAVE_SCANDIR
-
 /* Define to 1 if you have the `select' function. */
 #undef HAVE_SELECT
 
